# barco_autonomo_tmr

./: README.md  calibrar_hsv.py  package.xml  setup.py
barco_control/: colcon_command_prefix_setup_py.sh.env  setup.cfg
barco_control/barco_control/: __init__.py  barco_launch.py  camera_node.py  conveyor_node.py  esp_bridge_node.py  gps_node.py  motor_node.py  navigation_node.py  servo_node.py  ultra_sonic_node.py
barco_control/barco_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
barco_control/launch/: barco_launch.py
barco_control/prefix_override/: sitecustomize.py
esp32/: esp32_barco.ino
esp32/esp32_barco/: esp32_barco.ino
install/barco_control/lib/barco_control/: motor_node
install/barco_control/share/barco_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: barco_launch.py
log/: latest_build
src/barco_control/: setup.py
